--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,11 @@ services:
     container_name: msfaeg-app
     env_file: .env
     environment:
-      DB_HOST: db
+      DB_HOST: ${DB_HOST}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      DB_PORT: ${DB_PORT}
       JWT_TOKEN: ${JWT_TOKEN}
     depends_on:
       - db
