--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "@types/express": "^5.0.3",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "mysql2": "^3.14.5",
-    "node": "^24.8.0",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "ts": "^0.2.2"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/joi": "^17.2.2",
     "@types/node": "^24.5.0",
     "ts-node": "^10.9.2"
   },
